--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon server.js",
     "client": "cd client && npm start",
     "client-install": "cd client && npm install",
-    "dev-full": "concurrently \"npm run dev\" \"npm run client\""
+    "dev-full": "concurrently \"npm run dev\" \"npm run client\"",
+    "build": "cd client && npm run build"
   },
   "dependencies": {
     "cors": "^2.8.5",
