update render build

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "client": "cd client && npm start",
     "client-install": "cd client && npm install",
     "dev-full": "concurrently \"npm run dev\" \"npm run client\"",
-    "build": "npm install && npm run client-install && npm run build"
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run client-install && npm run build"
   },
   "dependencies": {
     "cors": "^2.8.5",
